--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.9",
     "postcss-pxtorem": "^6.0.0",
     "vant": "^2.12.54",
     "vue": "^2.6.14",
