--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
     "postcss-pxtorem": "^6.0.0",
+    "socket.io-client": "^4.7.2",
     "vant": "^2.12.54",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
